Gave seasondrivers also an overhaul, uninjected!

--- a/SimTECH/SimTECH/Pages/Racing/Qualy/SingleSessionQualy.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualy/SingleSessionQualy.razor
@@ -49,7 +49,7 @@
                 <MudTd Class="accent-cell">
                     <SmolAccent Colour="@context.Colour" />
                 </MudTd>
-                <MudTd>
+                <MudTd Class="overflow-hider">
                     <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                         <MudText Typo="Typo.body1">@context.FirstName</MudText>
                         <MudText Typo="Typo.button" Class="fontsize-button-text">@context.LastName</MudText>
@@ -60,7 +60,7 @@
                 <MudTd Class="number-col-lg">
                     <NumberDisplay Colour="@context.Colour" Accent="@context.Accent">@context.Number</NumberDisplay>
                 </MudTd>
-                <MudTd>
+                <MudTd Class="overflow-hider">
                     <MudText>@context.TeamName</MudText>
                 </MudTd>
                 <MudTd Class="number-col-xl">
