--- a/SimTECH/SimTECH/Pages/Racing/Practice.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Practice.razor
@@ -54,7 +54,7 @@
                 <MudTd Class="accent-cell">
                     <SmolAccent Colour="@context.Colour" />
                 </MudTd>
-                <MudTd>
+                <MudTd Class="overflow-hider">
                     <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                         <MudText Typo="Typo.body1">@context.FirstName</MudText>
                         <MudText Typo="Typo.button" Class="fontsize-button-text">@context.LastName</MudText>
@@ -65,7 +65,7 @@
                 <MudTd Class="number-col">
                     <NumberDisplay Colour="@context.Colour" Accent="@context.Accent">@context.Number</NumberDisplay>
                 </MudTd>
-                <MudTd>
+                <MudTd Class="overflow-hider">
                     <MudText>@context.TeamName</MudText>
                 </MudTd>
                 <MudTd Class="number-col-xl">
