--- a/SimTECH/SimTECH/Pages/Racing/Qualy/EliminationQualy.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualy/EliminationQualy.razor
@@ -43,7 +43,7 @@
                     <MudTd Class="accent-cell">
                         <SmolAccent Colour="@context.Colour" />
                     </MudTd>
-                    <MudTd>
+                    <MudTd Class="overflow-hider">
                         <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                             <MudText>@context.FirstName</MudText>
                             <MudText Typo="Typo.button" Class="fontsize-button-text">@context.LastName</MudText>
@@ -54,7 +54,7 @@
                     <MudTd Class="number-col-lg">
                         <NumberDisplay Colour="@context.Colour" Accent="@context.Accent">@context.Number</NumberDisplay>
                     </MudTd>
-                    <MudTd>
+                    <MudTd Class="overflow-hider">
                         <MudText>@context.TeamName</MudText>
                     </MudTd>
                     <MudTd Class="number-col-xl">
@@ -128,7 +128,7 @@
                     <MudTd Class="pa-0">
                         <SmolAccent Colour="@context.Colour" />
                     </MudTd>
-                    <MudTd>
+                    <MudTd Class="overflow-hider">
                         <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                             <MudText Typo="Typo.body1">@context.FirstName</MudText>
                             <MudText Typo="Typo.button" Class="fontsize-button-text">@context.LastName</MudText>
@@ -139,7 +139,7 @@
                     <MudTd Class="number-col-lg">
                         <NumberDisplay Colour="@context.Colour" Accent="@context.Accent">@context.Number</NumberDisplay>
                     </MudTd>
-                    <MudTd>
+                    <MudTd Class="overflow-hider">
                         <MudText>@context.TeamName</MudText>
                     </MudTd>
                     <MudTd Class="number-col-xl">
@@ -220,7 +220,7 @@
                     <MudTd Class="pa-0">
                         <SmolAccent Colour="@context.Colour" />
                     </MudTd>
-                    <MudTd>
+                    <MudTd Class="overflow-hider">
                         <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                             <MudText Typo="Typo.body1">@context.FirstName</MudText>
                             <MudText Typo="Typo.button" Class="fontsize-button-text">@context.LastName</MudText>
@@ -231,7 +231,7 @@
                     <MudTd Class="number-col-lg">
                         <NumberDisplay Colour="@context.Colour" Accent="@context.Accent">@context.Number</NumberDisplay>
                     </MudTd>
-                    <MudTd>
+                    <MudTd Class="overflow-hider">
                         <MudText>@context.TeamName</MudText>
                     </MudTd>
                     <MudTd>
